deploy.yaml
---
apiVersion : apps/v1
kind: Deployment
metadata:
  labels:
    app: java
  name: java 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java
  template:
    metadata:
      labels:
        app: java 
    spec:
      containers:
      - name: java
        image: daguilar08/java-kubernetes-ejercicio:latest
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: java
  name: java
spec:
 # type: LoadBalancer
  ports:
  - port: 30000
    protocol: TCP
    targetPort: 8080
  selector:
    app: java
